--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +20,15 @@
     </div>
 
     <nav class="menu">
-      <ul class="menu__list">
+      <div class="menu__hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="menu__list" id="menu-list">
         <li class="menu__item active"><a href="#">Главная</a></li>
         <li class="menu__item"><a href="#">Страница</a></li>
         <li class="menu__item"><a href="#">Запись</a></li>
@@ -30,11 +39,24 @@
   </div>
   <div class="container">
     <div class="main">
-      <div class="breadcrum">
-        <span><a href="#">Главная</a></span>
-        <span><a href="#">Раздел</a></span>
+      <div class="breadcrumb">
+        <span><a href="#">Главная</a></span><i class="fas fa-angle-right"></i>
+        <span><a href="#">Раздел</a></span><i class="fas fa-angle-right"></i>
         <span><a href="#">Страница</a></span>
       </div>
+
+      <div class="content">
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+        <div class="content-item"><div></div></div>
+      </div>
+
     </div>
     <div class="left"></div>
     <div class="right"></div>
@@ -65,6 +87,9 @@
       </div>
     </div>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
